CSS styling: fixed flashcard alignment and changed outline colors

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -11,6 +11,9 @@
 
   .field-container {
     padding-bottom: 1em;
+    input {
+      outline-color: #B8C99D;
+    }
     label {
       display: inline-block;
       width: 80px;
